[project]
name        = "GDV"
version     = "0.0.1"
description = "Grafische Datenverarbeitung an der HFU"
readme      = "README.md"
authors     = [
  { name = "Uwe Hahne", email = "uwe.hahne@hs-furtwangen.de" },
  { name = "Techassi", email = "git@techassi.dev" }
]
keywords    = ["opencv", "computer", "vision"]
requires-python = ">=3.9.0"
dependencies    = [
  "black==22.10.0",
  "click==8.1.3",
  "mypy-extensions==0.4.3",
  "numpy==1.23.4",
  "opencv-python==4.6.0.66",
  "pathspec==0.10.1",
  "platformdirs==2.5.3",
  "pycodestyle==2.9.1",
  "tomli==2.0.1"
]

[tool.black]
line-length = 120
